<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    >


    <android.support.v7.widget.CardView
        android:id="@+id/weather_list"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        card_view:cardBackgroundColor="@android:color/darker_gray"
        >

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/placeholder_weather_icon_content_description"

            android:src="@drawable/sun" />


        <TextView
            android:id="@+id/weather_forecast"
            style="@style/city_heading_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="35dp"
            android:textColor="@android:color/white">


        </TextView>


        <ImageView
            android:id="@+id/time_icon"

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="210dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/placeholder_time_icon_content_description"
            android:src="@drawable/clock" />

        <TextView
            android:id="@+id/time_text"
            style="@style/city_heading_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="75dp"
            android:textColor="@android:color/white">


        </TextView>


        <ImageView
            android:id="@+id/temp_icon"

            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="85dp"
            android:contentDescription="@string/placeholder_temperature_icon_content_description"

            android:src="@drawable/thermometer" />


        <TextView
            android:id="@+id/temp_text"
            style="@style/city_heading_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="95dp"
            android:textColor="@android:color/white">


        </TextView>

    </android.support.v7.widget.CardView>


</RelativeLayout>